--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -25,7 +25,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
-        <a class="navbar-brand" href="INDEX.HTML">PrangPraulkdash</a>
+        <a class="navbar-brand" href="INDEX.HTML">PrangPrau</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
