--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -117,6 +117,32 @@
             </div>
         </section>
     </section>
+  <div class="row">
+                        <div class="col card mx-1">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </section>
+    <section id="album" class="mt-4 bg-light">
+            <div class="container">
+                <div class="album-content">
+                    <img src="ollie.jpg" height="280px" alt="">
+                    <div>
+                        <h2>Mempelajari Ollie</h2>
+                        <p>Lakukan hal ini dengan menekankan kaki belakang di bagian ekornya. Ollie melibatkan gerakan mendadak yang mengakibatkan skateboard melayang di udara dan mendarat dengan aman. Bagian pertama trik ini adalah membiasakan diri menghentakkan kaki belakang di ekor papan, sehingga Anda bisa menyentakkannya.......</p>
+                        <a href="ollie.html" class="btn btn-primary">Lanjutkan Membaca</a>
+
+                    </div>
+                    <div class="row">
+                        <div class="col card mx-1">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </section>
     
     <div id="container">
            
